--- a/src/style/Home.css
+++ b/src/style/Home.css
@@ -30,7 +30,7 @@
 
 @media screen and (min-width: 700px) {
     .home-header {
-        width: 85vw;
+        width: 90vw;
         height: 14rem;
         background-image: url('../assets/header_banner_desktop.png');
         background-size: cover;
@@ -49,7 +49,7 @@
     }
     
     .home-card-container {
-        width: 85vw;
+        width: 90vw;
         background-color: #f6f6f6;
         margin: 2.75rem auto;
         display: flex;
