--- a/src/style/KasaHeader.css
+++ b/src/style/KasaHeader.css
@@ -30,7 +30,7 @@
 
 @media screen and (min-width: 700px){
   .header-container {
-    width: 85vw;
+    width: 90vw;
     margin: 2.5rem auto;
   }
 
